fff
08:51:39 **** Incremental Build of configuration Debug for project mcu_boot_u5_bootloader ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/Bootloader_hex.c" -mcpu=cortex-m33 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32U5A9xx -c -I../Core/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32U5xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Bootloader_hex.d" -MT"Core/Src/Bootloader_hex.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Bootloader_hex.o"
../Core/Src/Bootloader_hex.c: In function 'Receive_Raw_Hex_File':
../Core/Src/Bootloader_hex.c:526:37: warning: implicit declaration of function 'Set_Active_Slot' [-Wimplicit-function-declaration]
  526 |     if (target_slot == SLOT_A_ADDR) Set_Active_Slot(SLOT_A_ACTIVE);
      |                                     ^~~~~~~~~~~~~~~
../Core/Src/Bootloader_hex.c:310:25: note: previous declaration of 'Set_Active_Slot' with type 'void(uint32_t)' {aka 'void(long unsigned int)'}
  310 |             extern void Set_Active_Slot(uint32_t new_slot_flag);
      |                         ^~~~~~~~~~~~~~~
../Core/Src/Bootloader_hex.c:526:37: error: incompatible implicit declaration of function 'Set_Active_Slot'
  526 |     if (target_slot == SLOT_A_ADDR) Set_Active_Slot(SLOT_A_ACTIVE);
      |                                     ^~~~~~~~~~~~~~~
../Core/Src/Bootloader_hex.c:310:25: note: previous implicit declaration of 'Set_Active_Slot' with type 'void(uint32_t)' {aka 'void(long unsigned int)'}
  310 |             extern void Set_Active_Slot(uint32_t new_slot_flag);
      |                         ^~~~~~~~~~~~~~~
../Core/Src/Bootloader_hex.c:527:10: error: incompatible implicit declaration of function 'Set_Active_Slot'
  527 |     else Set_Active_Slot(SLOT_B_ACTIVE);
      |          ^~~~~~~~~~~~~~~
../Core/Src/Bootloader_hex.c:310:25: note: previous implicit declaration of 'Set_Active_Slot' with type 'void(uint32_t)' {aka 'void(long unsigned int)'}
  310 |             extern void Set_Active_Slot(uint32_t new_slot_flag);
      |                         ^~~~~~~~~~~~~~~
../Core/Src/Bootloader_hex.c: At top level:
../Core/Src/Bootloader_hex.c:70:12: warning: 'Ring_Buffer_Read' defined but not used [-Wunused-function]
   70 | static int Ring_Buffer_Read(uint8_t *byte) {
      |            ^~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/Bootloader_hex.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

08:51:40 Build Failed. 3 errors, 2 warnings. (took 1s.9ms)
